<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <Button 
        android:id="@+id/open_cvbs1"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/cvbs1"
        />
    <Button 
        android:id="@+id/open_cvbs2"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/cvbs2"
        />
    <Button
        android:id="@+id/open_night_video" 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/nightvideo"
        />
    <Button 
        android:id="@+id/open_rgb_video"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/rgbvideo"
        />

</LinearLayout>
