<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 录音 -->
    <RelativeLayout
        android:layout_margin="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/settings_text_color"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_mute"/>

        <Switch
            android:id="@+id/frontMute"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- 视频水印 -->
    <RelativeLayout
        android:layout_margin="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/settings_text_color"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_watermark"/>

        <Switch
            android:id="@+id/frontWaterMark"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- 视频分辨率 -->
    <RelativeLayout
        android:id="@+id/frontRecordQualityRL"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/settings_text_color"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_record_quality"/>

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/frontRecordQualityTV"
                android:textColor="@color/settings_text_color"
                android:paddingTop="10dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigate_next_grey_400_48dp"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- 照片分辨率 -->
    <RelativeLayout
        android:id="@+id/frontPictureQualityRL"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/settings_text_color"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_picture_quality"/>

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/frontPictureQualityTV"
                android:textColor="@color/settings_text_color"
                android:paddingTop="10dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigate_next_grey_400_48dp"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- 录像时间 -->
    <RelativeLayout
        android:id="@+id/frontRecordDurationRL"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/settings_text_color"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_record_duration"/>

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/frontRecordDurationTV"
                android:textColor="@color/settings_text_color"
                android:paddingTop="10dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigate_next_grey_400_48dp"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
